zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__keep_scroll_position_when_exiting_scroll_mode.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", last_snapshot)"
---
00 (C): ┌ Pane #1 ────────────── SCROLL:  4/13 ┐┌ Pane #2 ─────────────── apt-anteater ┐
01 (C): │fill pane up with something 9         ││                                      │
02 (C): │fill pane up with something 10        ││                                      │
03 (C): │fill pane up with something 11        ││                                      │
04 (C): │fill pane up with something 12        ││                                      │
05 (C): │fill pane up with something 13        ││                                      │
06 (C): │fill pane up with something 14        ││                                      │
07 (C): │fill pane up with something 15        ││                                      │
08 (C): │fill pane up with something 16        ││                                      │
09 (C): └──────────────────────────────────────┘└──────────────────────────────────────┘
