zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__query_tab_names_action_logs_the_tab_names.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{:#?}\", log_tab_names_instruction)"
---
Some(
    Log(
        [
            "Tab #1",
            "Tab #2",
        ],
        10,
        Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_lines: [],
            },
        ),
    ),
)
